# mymoney-skill

./: Makefile  README.md  docker-compose.yml  pyproject.toml
mymoney/: main.py
mymoney/clients/: GDriveClient.py
mymoney/contrib/: schemas.py  settings.py
mymoney/database/: mongo.py
mymoney/models/: CellBaseModel.py  Data.py
mymoney/repository/: BaseRepository.py  GDriveRepository.py  SpreadsheetRepository.py  WorksheetRepository.py
mymoney/repositorys/: DataRepository.py
mymoney/schemas/: Data.py
mymoney/services/: DataService.py  GDriveService.py  GSheetService.py
mymoney/sheet/clients/: GDriveClient.py  GspreadClient.py
mymoney/sheet/repository/: BaseRepository.py  GDriveRepository.py  SpreadsheetRepository.py  WorksheetRepository.py
mymoney/utils/: GspreadClient.py  MetadataUtil.py  SheetClient.py  SheetController.py  Utils.py  main.py
mymoney/utils/clients/: GDriveClient.py  GspreadClient.py
mymoney/utils/controllers/: GDriveController.py  GSheetController.py  MetadataController.py  SpreadsheetController.py
mymoney/utils/exceptions/: BaseExcpetion.py  Exceptions.py
src/: main.py  routers.py
src/contrib/: settings.py
src/controllers/: SheetController.py
src/database/: BaseMongo.py
src/models/: Cell.py  CellBaseModel.py
src/repositorys/: CellRepository.py
src/schemas/: Cell.py
src/services/: GDriveService.py  GSheetService.py  SheetService.py
src/sheet/: MetadataUtil.py
src/sheet/clients/: GDriveClient.py  GspreadClient.py
src/sheet/exceptions/: Exceptions.py
src/sheet/repository/: BaseRepository.py  GDriveRepository.py  SpreadsheetRepository.py  WorksheetRepository.py
src/utils/: Utils.py
