[tool.poetry]
name = "mymoney"
version = "0.0.1"
description = "Alexa and google sheet integration to accessible managment of income and outcome."
authors = ["Henrique Lucas <henriquelucas15@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.7.1"
gspread = "^6.1.2"
google-auth = "^2.30.0"
python-dotenv = "^1.0.1"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.133.0"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
